# ftxui-play

./: CMakeLists.txt  README.md
src/: main.cpp
